Use `cursor: pointer` instead of resize arrows for click spots

--- a/resources/font_sizing.css
+++ b/resources/font_sizing.css
@@ -37,3 +37,15 @@
         line-height: 1.7vw !important;
     }
 }
+
+#go-back {
+    cursor: pointer;
+}
+
+#go-next {
+    cursor: pointer;
+}
+
+#readingRange {
+    cursor: pointer;
+}
